<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/goBack"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/goback" />

        <com.elapse.easyweather.customView.CustomEditText
            android:id="@+id/ed_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textSize="@dimen/textSize"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/outlook"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:text="@string/search_btn"
            android:background="@drawable/outlook"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/indicatorBackground"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:padding="5dp"
                android:text="@string/current_city"
                android:layout_marginEnd="20dp"
                android:background="@drawable/outlook" />

            <TextView
                android:id="@+id/current_city"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:padding="5dp"
                android:hint="@string/hint"
                android:background="@drawable/outlook" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:padding="5dp"
            android:text="@string/hot_cities"
            android:layout_marginBottom="10dp"
            android:background="@drawable/outlook" />

        <GridView
            android:id="@+id/hot_city"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:numColumns="4" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/indicatorBackground"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/textSize"
            android:text="@string/search_history"
            android:background="@drawable/outlook"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="@dimen/textSize"
            android:layout_alignParentEnd="true"
            android:background="@drawable/outlook"
            android:text="@string/clear_history"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>
